little fixes, problem with jumping collision

--- a/style/style.css
+++ b/style/style.css
@@ -288,7 +288,7 @@ body{
    }
    .start-screen {
         max-width: 100%;
-        height: 100vh;
+        height: 50vh;
         background-size: cover;
     }
     .start-wrapper{
